# core-africare-identity

./: .env.development  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  conftest.py  deployment-aca.yaml  docker-compose.test.yaml  docker-compose.yaml  init-db.sql  pyproject.toml  pytest.ini
.claude/commands/: create-endpoint.md  create-event.md  create-fhir-mapper.md  create-model.md  create-schema.md  health-check.md  identity-migrate-hapi-fhir.md  implement-professional-deletion-phases-2-3.md  run-tests.md
.github/: README.md
.github/scripts/: setup-secrets.sh
.github/workflows/: cd.yaml  ci.yaml
alembic/: env.py  env.py.orig  script.py.mako
alembic/versions/: 1374f3c565ad_add_soft_delete_fields_to_patients_and_.py  23f6c23e1f1b_add_professional_deletion_improvements_.py  2463648ab224_update_gender_field_to_male_female_only_.py  334ba84e6c89_add_patient_deletion_improvements_fields.py  d5be1f5f6b77_drop_legacy_patients_professionals_.py  f0c3264fd0a5_add_gdpr_metadata_tables_for_fhir_.py
app/: main.py
app/core/: cache.py  config.py  database.py  dependencies.py  events.py  events_interface.py  events_redis.py  exceptions.py  retry.py  security.py  webhook_security.py  webhook_streams.py
app/events/: __init__.py  base.py
app/models/: __init__.py  example.py  gdpr_metadata.py  patient.py  professional.py
app/schemas/: __init__.py  keycloak.py  patient.py  professional.py  responses.py  statistics.py  utils.py
app/services/: anonymization_scheduler.py  event_service.py  patient_service.py  (+5 more)
docs/: .markdownlint.json  README.md  admin-patient-deletion-api.md  cache.md  database.md  environment-lists.md  events.md  keycloak-webhook-setup.md  patient-deletion-improvements.md  professional-deletion-improvements.md  rfc9457-problem-details.md  security.md  testing.md  webhook-client-filtering.md  webhook-synchronization.md  webhook-timestamp-validation.md  webhooks.md
scripts/: install-azure-infrastructure.sh  migrate_to_fhir.py
tests/: test_config.py  test_events.py  test_examples.py  test_keycloak_sync.py  test_keycloak_webhook_event_validation.py  test_problem_details.py  test_professional_endpoints.py  test_security_extract_token.py  test_webhook_client_filtering.py  test_webhook_endpoint.py  test_webhook_signature.py  test_webhook_signature_compatibility.py
(+60 files in other folders)
